--- a/ch02/package.json
+++ b/ch02/package.json
@@ -1,3 +1,7 @@
 {
-    "type" : "module"
+    "type": "module",
+    "dependencies": {
+        "fs-extra": "^10.0.1",
+        "glob": "^7.2.0"
+    }
 }
