--- a/ch08/package.json
+++ b/ch08/package.json
@@ -1,7 +1,12 @@
 {
   "type": "module",
   "dependencies": {
-    "assert": "^2.0.0",
+    "assert": "^2.0.0"
+  },
+  "devDependencies": {
     "mocha": "^10.2.0"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
